# grupodeofertas

./: .gitignore  README.md  pyproject.toml
bot-de-ofertas/: main.py  short_url.py  telegram_message.py
